--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -106,3 +106,25 @@ permalink: /commissions/
     </div>
   </div>
 </div>
+<div class="row" id="laws">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Idaho Open Meeting Laws</h3>
+      </div>
+      <div class="panel-body list-group">
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-201.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-201:</strong> Formation of public policy at open meetings</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-202.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-202:</strong> Open public meetings - Definitions</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-203.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-203:</strong> Governing bodies - Requirement for open public meetings</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-204.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-204:</strong> Notice of meetings Agendas</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-205.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-205:</strong> Written minutes of meetings</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-206.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-206:</strong> Executive sessions - When authorized</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-207.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-207:</strong> Open legislative meetings required</a>
+        <a href="https://www.legislature.idaho.gov/idstat/Title74/T74CH2SECT74-208.htm" target="_blank" rel="noopener" class="list-group-item"><strong>74-208:</strong> Violations</a>
+      </div>
+      <div class="panel-footer">
+        Look at the complete list of Idaho Statutes.
+      </div>
+    </div>
+  </div>
+</div>
