--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -4,18 +4,18 @@ title: Commissions
 permalink: /commissions/
 ---
 
-<div class="container">
+<div class="row">
   <div class="col-md-offset-1 col-md-10">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
+        <div class="panel-heading" role="tab" id="headingPlanning">
           <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePlanning" aria-expanded="false" aria-controls="collapsePlanning">
               Planning
             </a>
           </h4>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+        <div id="collapsePlanning" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingPlanning">
           <div class="panel-body">
             <div class="col-md-8">
               <p>
