--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -2,4 +2,31 @@
 layout: page
 title: Elections
 permalink: /auditor/elections/
+calendar: true
 ---
+<div class="row">
+
+</div>
+<!-- Info Row -->
+<div class="row">
+  <div class="col-md-4">
+
+  </div>
+  <div class="col-md-4">
+
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="text-center">Upcoming</h4>
+      </div>
+        <div id='loading' class="text-center"><i class="fa fa-spinner fa-2x fa-spin"></i></div>
+        <div id='calendar'></div>
+        <script text/javascript>
+          calendarList('/api/electionCalendar.json', 6, 'months');
+          calendarMonth();
+        </script>
+    </div>
+  </div>
+</div>
+<!-- End Info Row -->
