--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,14 +2,20 @@
 layout: page
 title: Contact
 permalink: /contact/
+contacts: true
 ---
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-3">
+    <div id="departmentInfo">
+
+    </div>
+  </div>
+  <div class="col-md-6">
     {% include contact_form.html %}
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-push-3 hidden-xs">
+  <div class="col-md-6 col-md-offset-3 hidden-xs">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2734.738297424969!2d-116.99893478399314!3d46.730623079136336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54a0277bd303d061%3A0xabbe5e1cd02270d1!2s522+S+Adams+St%2C+Moscow%2C+ID+83843!5e0!3m2!1sen!2sus!4v1490107744832" width="550" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
   <div class="visible-xs">
@@ -18,3 +24,7 @@ permalink: /contact/
     </div>
   </div>
 </div>
+
+<script>
+  departmentInfo();
+</script>
