--- a/_pages/dept/district_court/home.html
+++ b/_pages/dept/district_court/home.html
@@ -65,27 +65,39 @@ permalink: /district_court/
           </h4>
         </div>
         <div id="ticketInfo" class="panel-collapse collapse">
-          <div class="panel-body">
-            <p>
-              Any person charged with an infraction by a citation may enter an admission by paying the total amount due either in person at the Clerk's Office or by mail to:
-            </p>
-            <p>
-              Latah County District Court<br />
-              PO Box 8068<br />
-              Moscow, ID 83843
-            </p>
-            <p>
-              Make checks payable to: District Court
-            </p>
-            <p>
-              If the person charged wishes to deny the offense, they may do so either by checking the “not guilty” box on the reverse side of the citation and mailing it to the above address so it arrives no later than the appearance date, telephoning the Clerk's Office at (208) 883-2255 and entering their denial over the phone, or by stopping by the Clerk's Office at 522 South Adams and denying the charge. The clerk will then set a trial date and provide written notice to the defendant and the prosecutor.
-            </p>
-            <p>
-              All parking tickets issued by the City of Moscow are paid at the Moscow Police Department.
-            </p>
-            <p>
-              Please call the Clerk's Office if you have questions.
-            </p>
+          <div class="list-group">
+            <li class="list-group-item">
+              <h4 class="list-group-item-heading">Payment Info</h4>
+              <p>
+                Any person charged with an infraction by a citation may enter an admission by paying the total amount due either in person at the Clerk's Office or by mail to:
+              </p>
+              <p>
+                Latah County District Court<br />
+                PO Box 8068<br />
+                Moscow, ID 83843
+              </p>
+              <p>
+                Make checks payable to: District Court
+              </p>
+            </li>
+            <li class="list-group-item">
+              <h4 class="list-group-item-heading">Dispute</h4>
+              <p>
+                If the person charged wishes to deny the offense, they may do so either by checking the “not guilty” box on the reverse side of the citation and mailing it to the above address so it arrives no later than the appearance date, telephoning the Clerk's Office at (208) 883-2255 and entering their denial over the phone, or by stopping by the Clerk's Office at 522 South Adams and denying the charge. The clerk will then set a trial date and provide written notice to the defendant and the prosecutor.
+              </p>
+            </li>
+            <li class="list-group-item">
+              <h4 class="list-group-item-heading">Parking Tickets</h4>
+              <p>
+                All parking tickets issued by the City of Moscow are paid at the Moscow Police Department.
+              </p>
+            </li>
+            <li class="list-group-item">
+              <h4 class="list-group-item-heading">Additional Questions</h4>
+              <p>
+                Please call the Clerk's Office if you have questions.
+              </p>
+            </li>
           </div>
         </div>
       </div>
