Updated Weed Page

--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -4,51 +4,46 @@ title: Weed Control
 permalink: /weed_control/
 ---
 
-<div class="container">
-  <!-- Department Description -->
-  <div class="col-md-8 hidden-xs panel panel-default">
-		<p class="panel-body">
-			Supervised by the County Commissioners, this department is responsible for enforcement of the State Noxious Weed Law; the Idaho Department of Agriculture Rules and Regulations and the County Noxious Weed Ordinance. The department's activities include inspecting land in Latah County for compliance with the above laws, rules, regulations and ordinances, while checking for the invasion of weeds new to the state or county or new outbreaks of known noxious weeds and to consult, advise and provide direction on matters pertaining to the most effective and practical methods of noxious weed control.
-		</p>
-	</div>
-  <!-- End Department Description -->
-  <!-- Services List -->
-	<div class="col-md-4">
-  	<div class="panel panel-default">
-    	<div class="panel-heading">Our Services</div>
-    	<div class="list-group">
-      	<a href="#" class="list-group-item">Mapping</a>
-      	<a href="#" class="list-group-item">Building Permits</a>
-      	<a href="#" class="list-group-item">Home Inspections</a>
-    	</div>
-  	</div>
-	</div>
-  <!-- End Services List -->
-</div>
-
-<!-- Resources List -->
+<div class="row">
+  <!-- Left Pane -->
   <div class="col-md-8">
-    <h4>Resources</h4>
-    <div class="panel-group" role="tablist">
+    <!-- Department Description -->
+    <div class="">
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="collapseHeading1">
+        <div class="panel-body text-justify">
+          <p>
+            Supervised by the County Commissioners, this department is responsible for enforcement of the State Noxious Weed Law; the Idaho Department of Agriculture Rules and Regulations and the County Noxious Weed Ordinance. The department's activities include inspecting land in Latah County for compliance with the above laws, rules, regulations and ordinances, while checking for the invasion of weeds new to the state or county or new outbreaks of known noxious weeds and to consult, advise and provide direction on matters pertaining to the most effective and practical methods of noxious weed control.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- End Description -->
+    <!-- Resources List -->
+    <h4>Resources</h4>
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingOne">
           <h4 class="panel-title">
-            <a href="#collapse1" class="" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="collapse1">Idaho State Department of Agriculture</a>
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Idaho State Department of Agriculture
+            </a>
           </h4>
         </div>
-        <div class="panel-collapse collapse" role="tabpanel" id="collapse1" aria-labelledby="collapseHeading1" aria-expanded="true" style="">
+        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
           <ul class="list-group">
             <a href="http://www.agri.state.id.us/Categories/PlantsInsects/NoxiousWeeds/indexnoxweedmain.php" target="_blank" class="list-group-item">Noxious Weed Program</a>
           </ul>
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="collapseHeading2">
+        <div class="panel-heading" role="tab" id="headingTwo">
           <h4 class="panel-title">
-            <a href="#collapse2" class="" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="collapse2">Herbicide Lables and Information</a>
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Herbicide Labels and Information
+            </a>
           </h4>
         </div>
-        <div class="panel-collapse collapse" role="tabpanel" id="collapse2" aria-labelledby="collapseHeading2" aria-expanded="true" style="">
+        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
           <ul class="list-group">
             <a href="http://uspest.org/pnw/weeds" target="_blank" class="list-group-item">PNW Weed Management Handbook</a>
             <a href="http://www.cdms.net/LabelsMsds/LMDefault.aspx" target="_blank" class="list-group-item">CDMS, LABELS & MSDS</a>
@@ -58,12 +53,14 @@ permalink: /weed_control/
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="collapseHeading3">
+        <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
-            <a href="#collapse3" class="" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="collapse3">Weed Photos</a>
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Weed Photos
+            </a>
           </h4>
         </div>
-        <div class="panel-collapse collapse" role="tabpanel" id="collapse3" aria-labelledby="collapseHeading3" aria-expanded="true" style="">
+        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
           <ul class="list-group">
             <a href="http://www.idahoweedawareness.com/" target="_blank" class="list-group-item">Idaho Weed Awareness Campaign</a>
             <a href="http://plants.usda.gov/index.html" target="_blank" class="list-group-item">USDA NRCS National Plants Database</a>
@@ -71,12 +68,14 @@ permalink: /weed_control/
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="collapseHeading4">
+        <div class="panel-heading" role="tab" id="headingFour">
           <h4 class="panel-title">
-            <a href="#collapse4" class="" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="collapse1">Bio Control</a>
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Bio Control
+            </a>
           </h4>
         </div>
-        <div class="panel-collapse collapse" role="tabpanel" id="collapse4" aria-labelledby="collapseHeading1" aria-expanded="true" style="">
+        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
           <ul class="list-group">
             <a href="http://www.nezperce.org/~biocontrol/" target="_blank" class="list-group-item">Nez Perve Bio Control Center</a>
             <a href="http://mtwow.org/Bio-Control-main.htm" target="_blank" class="list-group-item">Bio Control Agents</a>
@@ -84,12 +83,14 @@ permalink: /weed_control/
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="collapseHeading5">
+        <div class="panel-heading" role="tab" id="headingFive">
           <h4 class="panel-title">
-            <a href="#collapse5" class="" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="collapse5">Idaho Web Links</a>
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+              Idaho Web Links
+            </a>
           </h4>
         </div>
-        <div class="panel-collapse collapse" role="tabpanel" id="collapse5" aria-labelledby="collapseHeading5" aria-expanded="true" style="">
+        <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
           <ul class="list-group">
             <a href="http://idahoweedcontrol.org/" target="_blank" class="list-group-item">Idaho Weed Control Association</a>
             <a href="http://www.iawcs.org/" target="_blank" class="list-group-item">Idaho Association of Weed Control Superintendents</a>
@@ -99,12 +100,14 @@ permalink: /weed_control/
         </div>
       </div>
       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="collapseHeading6">
+        <div class="panel-heading" role="tab" id="headingSix">
           <h4 class="panel-title">
-            <a href="#collapse6" class="" role="button" data-toggle="collapse" aria-expanded="true" aria-controls="collapse6">Other Useful Links</a>
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+              Other Useful Links
+            </a>
           </h4>
         </div>
-        <div class="panel-collapse collapse" role="tabpanel" id="collapse6" aria-labelledby="collapseHeading6" aria-expanded="true" style="">
+        <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
           <ul class="list-group">
             <a href="http://www.weedcenter.org/" target="_blank" class="list-group-item">Center for Invasive Plant Management</a>
             <a href="http://extension.wsu.edu/wsprs/Pages/default.aspx" target="_blank" class="list-group-item">WA State Pest Mangement Resourses</a>
@@ -113,15 +116,33 @@ permalink: /weed_control/
         </div>
       </div>
     </div>
+    <!-- End Resources List -->
   </div>
-  <!-- End Resources List -->
-
+  <!-- End Left Pane -->
+  <!-- Right Pane -->
+  <div class="col-md-4">
+    <!-- Services -->
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="text-center">Our Services</h4>
+      </div>
+      <div class="list-group">
+        <li class="list-group-item">Need Services</li>
+        <li class="list-group-item">Need Services</li>
+        <li class="list-group-item">Need Services</li>
+        <li class="list-group-item">Need Services</li>
+        <li class="list-group-item">Need Services</li>
+      </div>
+    </div>
+    <!-- End Services -->
+  </div>
   <!-- Weed Book Request -->
   <div class="col-md-4">
     <h4>Idaho Noxious Weed Book</h4>
     <div class="well">
       If you are a Latah County resident and would like a free copy of the Idaho Noxious Weed Book, Click <a href="#">Here</a>.
     </div>
+    <!-- End Weed Book Request -->
   </div>
-  <!-- End Weed Book Request -->
+  <!-- End Right Pane -->
 </div>
