Updated Contact Page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -6,8 +6,12 @@ contacts: true
 ---
 <div class="row">
   <div class="col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-body text-center">
+        <h4><a href="/contacts/">Department Contact List</a></h4>
+      </div>
+    </div>
     <div id="departmentInfo">
-
     </div>
   </div>
   <div class="col-md-6">
